kubernetes/health/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: health
  labels:
    app.kubernetes.io/name: health
    app.kubernetes.io/part-of: monitoring
