kubernetes/health/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: health
  namespace: health
  labels:
    app.kubernetes.io/name: health
    app.kubernetes.io/part-of: monitoring
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: health
  ports:
    - name: http
      port: 8080
      targetPort: http
